--- a/core/app/build.gradle
+++ b/core/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "com.example.digitalink"
+        applicationId "com.core.canvas"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
