--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -198,7 +198,7 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
-    implementation 'com.facebook.android:facebook-login:latest.release' //fbsdk
+    implementation 'com.facebook.android:facebook-login:11.1.1' //fbsdk
 
     implementation 'com.google.firebase:firebase-core:+'
     implementation 'com.google.firebase:firebase-messaging:+'
