--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -192,7 +192,7 @@ dependencies {
     //kotlin
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
@@ -227,7 +227,7 @@ dependencies {
 
 
     implementation 'com.google.mlkit:barcode-scanning:17.0.0'   // scan QRCode
-
+    implementation 'com.google.mlkit:digital-ink-recognition:17.0.0'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
